<?xml version="1.0"?>
<package>
  <name>grasp</name>
  <version>0.0.0</version>
  <description>The grasp package</description>

 <maintainer email="baxter-birl@todo.todo">baxter-birl</maintainer>

  <license>TODO</license>
  <url type="website">divf.eng.cam.ac.uk/birl/</url>
  <author email="jmw241@cam.ac.uk">Joe Watson</author>
  


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>image_transport</run_depend>
</package>
